sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: not found: value n
  n = 2
  ^AlgBubbleSort2:7: error: not found: value n
    for (i <- 0 to getNombreValeurs() - n){
                                        ^AlgBubbleSort2:13: error: not found: value n
    n = n+1
    ^